@@ -585,6 +585,13 @@ Form a similar theorem replacing <q>nonsingular</q> by <q>singular</q> in both t
 </solution>
 </exercise>
 
+<exercise type="T" number="31" rough="Unique solution for b -> nonsingular">
+<problem contributor="robertbeezer">Suppose that $A$ is a square matrix of size $n\times n$ and that we know there is a <em>single</em> vector $\vect{b}\in\complex{n}$ such that the system $\linearsystem{A}{b}$ has a unique solution.  Prove that $A$ is a nonsingular matrix.  (Notice that this is very similar to <acroref type="theorem" acro="NMUS" />, but is not exactly the same.)
+</problem>
+<solution contributor="robertbeezer">Let $B$ be the reduced row-echelon form of the augmented matrix $\augmented{A}{\vect{b}}$.   Because the system $\linearsystem{A}{b}$ is consistent, we know by <acroref type="theorem" acro="RCLS" /> that the last column of $B$ is not a pivot column.  Suppose now that $r<![CDATA[<]]>n$.  Then by <acroref type="theorem" acro="FVCS" /> the system would have infinitely many solutions.  From this contradiction, we see that $r=n$ and the first $n$ columns of $B$ are each pivot columns.  Then the sequence of row operations that converts $\augmented{A}{\vect{b}}$ to $B$ will also convert $A$ to $I_n$.  Applying <acroref type="theorem" acro="NMRRI" /> we conclude that $A$ is nonsingular.
+</solution>
+</exercise>
+
 <exercise type="T" number="90" rough="Nonsingular => uniq solns, no RREF facts used">
 <problem contributor="robertbeezer">Provide an alternative for the second half of the proof of <acroref type="theorem" acro="NMUS" />, without appealing to properties of the reduced row-echelon form of the coefficient matrix.  In other words, prove that if $A$ is nonsingular, then $\linearsystem{A}{\vect{b}}$ has a unique solution for every choice of the constant vector $\vect{b}$.  Construct this proof without using <acroref type="theorem" acro="REMEF" /> or <acroref type="theorem" acro="RREFU" />.
 </problem>
