@@ -3,6 +3,7 @@ v3.00 2012/xx/xx
 New:  Diagrams NSLT, SLT (surjective linear transformations)
 New:  Diagrams KPI, IVLT (pre-images, invertible linear transformations)
 New:  Diagram KRI (kernel and range isomorphisms)
+New:  Exercise NM.T31 (with solution)
 Change:  Replaced Definition RR by an informal discussion
 Change:  Definition TSVS renamed as Definition SSVS
 Change:  Proof Technique D: discussion about definitions as nouns, adjectives
